ingress/rancher/helloworld-rancher.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-rancher-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-rancher
  template:
    metadata:
      labels:
        app: helloworld-rancher
    spec:
      containers:
      - name: k8s-demo
        image: infwonder/k8s-demo:v1
        ports:
        - name: nodejs-port
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-rancher
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: helloworld-rancher
